--- a/Axios/crud-op/src/index.css
+++ b/Axios/crud-op/src/index.css
@@ -2,7 +2,8 @@
 
 .container{
   display: flex;
-  align-items: flex-start;
+  align-items: flex-start;  
+  justify-content: space-around;  
 }
 
 table {
@@ -53,9 +54,14 @@ table button {
 }
 
 
-.form-container{
+.user-form-container{
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   text-align: center;   
+  justify-content: center;
+}
+
+.user-form-container .btn {
+  width: 271px;
+  margin-left: 48px;  
 }
